@@ -24,20 +24,17 @@ protected:
   Real linewidth_;
 
   vector<Grob*> find_breaks () const;
-  vector<int> find_break_indices () const;
   void solve_line (Column_x_positions *) const;
   bool feasible (vector<Grob*> const &) const;
 
   Simple_spacer_wrapper *generate_spacing_problem (vector<Grob*> const &,
 						   Interval) const;
-  virtual vector<Column_x_positions> do_solve () const = 0;
-
 public:
   virtual ~Break_algorithm ();
   Simple_spacer *(*get_line_spacer) ();
   Break_algorithm ();
   void set_pscore (Paper_score *);
-  vector<Column_x_positions> solve () const;
+  virtual vector<Column_x_positions> solve ();
 };
 
 #endif // BREAK_HH
