@@ -1,3 +1,11 @@
+2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/paper-score.cc (find_break_indices): move from Break_algorithm.
+
+	* lily/break-algorithm.cc (find_break_indices): remove linewidth <
+	0 case.
+	(find_breaks): idem.
+
 2006-02-21  Graham Percival  <gpermus@gmail.com>
 
 	* Documentation/user/advanced-notation.itely: fixed make-moment]
